--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Create Package Release
 on:
   push:
     tags:
-      - 'v*' # Triggers the workflow on version tags, e.g., v1.0.0
+      - 'v2.3.0' # Triggers the workflow on version tags, e.g., v1.0.0
   workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
@@ -14,14 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Swift
-        uses: fwal/setup-swift@v1
+      - name: Setup Swift
+        uses: swift-actions/setup-swift@v2.3.0
         with:
           swift-version: '5.10.0' # Replace with the required Swift version
 
+
       - name: Build Package
         run: swift build --configuration release
-
+  
       - name: Run Tests
         run: swift test
 
@@ -34,10 +35,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Swift
-        uses: fwal/setup-swift@v1
+        uses: fwal/setup-swift@v2.3.0
         with:
           swift-version: '5.10.0' # Replace with the required Swift version
-
+   
       - name: Archive Package
         run: |
           mkdir -p build
