--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - 'v2.3.0' # Triggers the workflow on version tags, e.g., v1.0.0
   workflow_dispatch: # Allows manual triggering of the workflow
-
+  
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -20,20 +20,15 @@ jobs:
           swift-tools-version: 5.10
   
   import: PackageDescription
-    
   let package:
-        name: "AppdbFramework"
+      - name: "AppdbFramework"
         platforms: .iOS@v18.5 , .tvOS@v18.5) 
-        
-      - name: Build Package
-        run: swift build --configuration release
-   
-   products: .library
-      - name: "AppdbFramework",
+        products: .library
+      - name: "AppdbFramework"
         targets: "AppdbRemoteBinaryPackage"
         
-  targets: .binaryTarget(
-      - name: "AppdbRemoteBinaryPackage",
+      - targets: .binaryTarget
+        name: "AppdbRemoteBinaryPackage"
         url: "https://dbservices.to/lib-dist/AppdbFramework-1.6.2.xcframework.zip",
         checksum: "673fd13ee2a4b9f39328af175bd8b6b5322fee104c0dc823644c1891ff1b668d"
         
