--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,10 @@ name: Create Package Release
 on:
   push:
     tags:
-      - 'v2.3.0' # Triggers the workflow on version tags, e.g., v1.0.0
-  workflow_dispatch: # Allows manual triggering of the workflow
-  
+      - 'v2.3.0'
+      - 'main'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -15,36 +16,29 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Swift
-        uses: swift-actions/setup-swift@v2.3.0
+        uses: fwal/setup-swift@v2.3.0
         with:
-          swift-version@v5.10
+          swift-version: '5.10.0'
 
-#swift-tools-v5.10
-       
-// import: "https://dbservices.to/lib-dist/AppdbFramework-1.6.2.xcframework.zip"
-    
-steps:
-      - name: "AppdbFramework",
-        use: "actions/download-artifact@v3"
-        with:
-          "673fd13ee2a4b9f39328af175bd8b6b5322fee104c0dc823644c1891ff1b668d"
-         
- package:
+      - name: Build Package
+        run: swift build --configuration release
+
+      - name: Run Tests
+        run: swift test
+
+  package:
     needs: build
     runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
-      - name: Run Tests
-        run: swift test
 
-      - name: Set up Swift
+      - name: Setup Swift
         uses: fwal/setup-swift@v2.3.0
         with:
-          swift-version: '5.10' # Replace with the required Swift version
-   
+          swift-version: '5.10.0'
+
       - name: Archive Package
         run: |
           mkdir -p build
@@ -58,7 +52,7 @@ steps:
 
   release:
     needs: package
-    runs-on: ubuntu-22.04n
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Download Package
