--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,22 +71,17 @@ jobs:
           draft: false
           prerelease: false
           files: build/package.tar.gz
-;
 
 
-             BSD 2-Clause License
 
-Copyright (c) 2024, appdb
+                          ==========BSD 2-Clause License==========
+                               | Copyright (c) 2025 appdb |
+           
+Redistribution and use in source and binary forms with or without modification are permitted provided that the following conditions are me:
 
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:
+1. Redistributions of source code must retain the above copyright notice this list of conditions and the following disclaimer.
 
-1. Redistributions of source code must retain the above copyright notice, this
-   list of conditions and the following disclaimer.
-
-2. Redistributions in binary form must reproduce the above copyright notice,
-   this list of conditions and the following disclaimer in the documentation
-   and/or other materials provided with the distribution.
+2. Redistributions in binary form must reproduce the above copyright notice this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
 
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
